# apiCourseHomework

./: .gitignore  README.md  要求.txt
backend/: .env.example  Cargo.toml  pom.xml
backend/migrations/: 001_init.sql  002_add_view_share_count.sql  003_social_tables.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/main/java/com/videoflow/: VideoFlowApplication.java
backend/src/main/java/com/videoflow/config/: AppProperties.java  DotEnvLoader.java  WebConfig.java
backend/src/main/java/com/videoflow/controller/: AuthController.java  MyController.java  SearchController.java  UserController.java  VideoController.java
backend/src/main/java/com/videoflow/dto/: AuthDtos.java  CommentDto.java  DanmakuDto.java  VideoDto.java
backend/src/main/java/com/videoflow/exception/: AppException.java  GlobalExceptionHandler.java
backend/src/main/java/com/videoflow/filter/: JwtAuthFilter.java  RequestLoggingFilter.java
backend/src/main/java/com/videoflow/mapper/: RowMappers.java
backend/src/main/java/com/videoflow/security/: JwtService.java  PasswordService.java
backend/src/main/java/com/videoflow/service/: AuthService.java  VideoService.java
backend/src/main/java/com/videoflow/util/: ApiResponse.java
backend/src/main/resources/: application.yml
backend/src/middleware/: logging.rs
backend/src/modules/: mod.rs
backend/src/modules/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
backend/src/modules/logs/: mod.rs
backend/src/modules/videos/: handlers.rs  mod.rs  models.rs
backend/src/utils/: jwt.rs  mod.rs  password.rs  response.rs
(+26 files in other folders)
